<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    tools:context="np.com.ravi.nexmoint.MainActivity">

    <TextView
        android:id="@+id/intro_tv"
        android:text="@string/intro_text"
        android:textAlignment="center"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/from_et"
        android:layout_below="@+id/intro_tv"
        android:hint="@string/from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/to_et"
        android:layout_below="@+id/from_et"
        android:hint="@string/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/message_et"
        android:layout_below="@+id/to_et"
        android:hint="@string/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/send_button"
        android:layout_below="@+id/message_et"
        android:layout_centerHorizontal="true"
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/respone_tv"
        android:layout_below="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>
